--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 <!--elemente-->
 <body> 
     <div id="hauptbox">
-    <p><i><b>Welcome to Sterne der Nacht!</b></i></p>
-    <p>A music label from Germany...... </p>
-    <img src="https://sternedernacht.neocities.org/gifs/sdnlogo.png" class="mitte"
-    width="125">
-    <p><i>Est. 2024</i></p>
-    </div>
+        <p><i><b>Welcome to Sterne der Nacht!</b></i></p>
+        <p>A music label from Germany...... </p>
+        <a target="_blank" href="https://sternedernacht.bandcamp.com/">
+        <img src="https://sternedernacht.neocities.org/gifs/sdnlogo.png" class="mitte"
+        width="125"> </a>
+        <p><i>Est. 2024</i></p>
+        </div>
 
     <div id="trenner1">
         <img src="https://sternedernacht.neocities.org/gifs/transpa.png" class="mitte"
