--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
     <div id="schwertL">
         <img src="https://sternedernacht.neocities.org/gifs/sword.gif"
-        width="100"
+        width="100">
     </div>
 
     <div id="schwertR">
@@ -132,14 +132,14 @@
         width="100">
     </div>
 
-    <duv id="kerzeL">
+    <div id="kerzeL">
         <img src="https://sternedernacht.neocities.org/gifs/candlestick.gif"
         width="50">
-    </duv>
+    </div>
 
-    <duv id="kerzeR">
+    <div id="kerzeR">
         <img src="https://sternedernacht.neocities.org/gifs/candlestick.gif"
         width="50">
-    </duv>
+    </div>
 </body>
 </html>
