--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <html>
-<!--sorry if any of this is super clustered or doesn't make sense i have absolutely no clue how this works lmao-->
+    <!--Stop snooping around in my site you weirdo-->
+<head>
+    <title>&#9790; &#9841; Sterne der Nacht &#9841; &#9789;</title>
+    <style>
+        .mitte {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;     
+        }
+        .center {
+            margin: auto;
+            width 50%;
+        }
 
-<!--css teil-->
-<style>
-    .footer { 
+        html {
+            background-image:url(https://sternedernacht.neocities.org/gifs/space%20background.gif);
+            color: white;
+        }
+        body {
+            margin: ;
+            width: 100%;
+            table-layout: fixed;
+        }
+        table {
+            border-collapse: collapse;
+            table-layout: fixed; 
+        }
+        td {
+            vertical-align: middle;
+            text-align: center;
+        }
+        .footer { 
     position: fixed; 
     bottom: 0;  
     left: 50%;
     transform: translate(-50%, -50%);
-    
-}
-    .mitte {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-}
-
-    html {
-        background-image:url(https://sternedernacht.neocities.org/gifs/space%20background.gif);
-        color: white;
-        h1 {text-align: center;}
-        p {text-align:  center;}
-    }
-
-    body {
-        margin: 10;
-    }
-
-    #hauptbox {
+        }
+        #Welcome {
         border: purple 5px groove;
         height: 220px;
         width: 400px;
@@ -35,8 +44,7 @@
         padding-top: 10px;
         background-image: url(https://sternedernacht.neocities.org/gifs/blood.gif)
     }
-
-    #diy {
+        #diy {
         border: purple 5px groove;
         height: 270px;
         width: 400px;
@@ -45,101 +53,102 @@
         background-image: url(https://sternedernacht.neocities.org/gifs/redstars.gif)
     }
 
-    #weiteres {
+        #Graveyard {
         border: purple 5px groove;
         height: 220px;
-        width: 700px;
+        width: 400px;
+        margin: 10px;
+        background-image: url(https://sternedernacht.neocities.org/gifs/Twinkling_Stars.gif)
+    }
+        #Incantations {
+        border: purple 5px groove;
+        height: 150px;
+        width: 200px;
         margin: auto;
         padding-top: 20px;
         background-image: url(https://sternedernacht.neocities.org/gifs/Twinkling_Stars.gif)
     }
-    #schwertL {
-        position:fixed;
-        left: 650px;
-        top: 50px;
-    }
-
-    #schwertR {
-        position:fixed;
-        right:650px;
-        top: 50px;
-    }
-
-    #kerzeL {
-        position:fixed;
-        left: 675px;
-        top: 420px;
-    }
-    #kerzeR {
-        position:fixed;
-        right: 675px;
-        top: 420px;
+        #Contact {
+        border: purple 5px groove;
+        height: 150px;
+        width: 200px;
+        margin: auto;
+        padding-top: 20px;
+        background-image: url(https://sternedernacht.neocities.org/gifs/Twinkling_Stars.gif)
     }
 
 </style>
-
-<!--metadaten-->
-<head>
-    <title>&#9790; &#9841; Sterne der Nacht &#9841; &#9789;</title>    
-    </head>
-
-<!--elemente-->
-<body> 
-    <div id="hauptbox">
-        <p><i><b>Welcome to Sterne der Nacht!</b></i></p>
-        <p>A music label from Germany...... </p>
-        <a target="_blank" href="https://sternedernacht.bandcamp.com/">
-        <img src="https://sternedernacht.neocities.org/gifs/sdnlogo.png" class="mitte"
-        width="125"> </a>
-        <p><i>Est. 2024</i></p>
-        </div>
-
-    <div id="trenner1">
-        <img src="https://sternedernacht.neocities.org/gifs/transpa.png" class="mitte"
-        width="20">
-    </div>
-
-    <div id="diy">
-        <p><b><i>DIY OR DIE!!!!!!</i></b></p>
-        <p><i>Show no love to big capitalist labels only being in the scene for money who call themselves underground, scam their artists and don't pay respect to the true art!</i></p>
-        <p><i>They are poison for the scene!</i></p>
-        <img src="https://sternedernacht.neocities.org/gifs/Anti-Capitalism.png" class="mitte"
-        width="80">
-    </div>
-
+</head>
+    <body>
+        <div class="center">
+        <table class="center">
+        <tr>
+            <div id="trenner">
+                <img src="https://sternedernacht.neocities.org/gifs/transpa.png" class="mitte"
+                width="1">
+            </div>
+        </tr>
+        <tr>
+            <td>
+                <img src="https://sternedernacht.neocities.org/gifs/ghoulblueanim.gif" width="165px">  
+            </td>
+            <td>
+                <div id="Welcome">
+                    <p><i><b>Welcome to Sterne der Nacht!</b></i></p>
+                    <p>A music label from Germany...... </p>
+                    <a target="_blank" href="https://sternedernacht.bandcamp.com/">
+                    <img src="https://sternedernacht.neocities.org/gifs/sdnlogo.png" class="mitte"
+                    width="125"> </a>
+                    <p><i>Est. 2024</i></p>
+                </div>
+            </td>   
+                <td>
+                    <img src="https://sternedernacht.neocities.org/gifs/ghoulblueanimR.gif" width="165px">  
+                </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="https://sternedernacht.neocities.org/gifs/chandelier.gif" width="150px">
+            </td>
+            <td>
+                <div id="diy">
+                    <p><b><i>DIY OR DIE!!!!!!</i></b></p>
+                    <p><i>Show no love to big capitalist labels only being in the scene for money who call themselves underground, scam their artists and don't pay respect to the true art!</i></p>
+                    <p><i>They are poison for the scene!</i></p>
+                    <img src="https://sternedernacht.neocities.org/gifs/Anti-Capitalism.png" class="mitte"
+                    width="80">
+                </div>
+            </td>
+            <td>
+                <img src="https://sternedernacht.neocities.org/gifs/chandelier.gif" width="150px">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div id="Incantations">
+                    <a href="https://haritsuke.com/releases">
+                    <img src="https://sternedernacht.neocities.org/gifs/GuestbookSpell.gif" width="100" class="mitte"
+                    width="200"></a>
+                    <p><i>Unholy Incantations...</i></p>
+            </td>
+            <td>
+                <div id="Graveyard">
+                    <a href="https://haritsuke.com/graveyard">
+                    <img src="https://sternedernacht.neocities.org/gifs/graveyard.gif" width="220px" class="mitte"
+                    width="200"></a>
+                    <p><i>Meet me at the graveyard......</i></p>
+            </td>
+            <td>
+                <div id="Contact">
+                    <a href="https://haritsuke.com/contact">
+                    <img src="https://sternedernacht.neocities.org/gifs/satan.gif" width=100px class="mitte"
+                    width="200"></a>
+                    <p><i>Speak to me...</i></p>
+            </td>
+        </tr>
+    </table>
     <div class="footer"> 
         <img src="https://sternedernacht.neocities.org/gifs/konstruktion.gif" class="mitte">
-    </div>
-
-    <div id="trenner2">
-        <img src="https://sternedernacht.neocities.org/gifs/transpa.png" class="mitte"
-        width="20">
-    </div>
-    <div id="weiteres">
-        <img src="https://sternedernacht.neocities.org/gifs/graveyard.gif" class="mitte"
-        width="200">
-        <p><i>Meet me at the graveyard......</i></p>
-
-
-    </div>
-    <div id="schwertL">
-        <img src="https://sternedernacht.neocities.org/gifs/sword.gif"
-        width="100">
-    </div>
-
-    <div id="schwertR">
-        <img src="https://sternedernacht.neocities.org/gifs/sword.gif"
-        width="100">
-    </div>
-
-    <div id="kerzeL">
-        <img src="https://sternedernacht.neocities.org/gifs/candlestick.gif"
-        width="50">
-    </div>
-
-    <div id="kerzeR">
-        <img src="https://sternedernacht.neocities.org/gifs/candlestick.gif"
-        width="50">
     </div>
 </body>
 </html>
