--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <!--Stop snooping around in my site you weirdo-->
 <head>
-    <title>&#9790; &#9841; Sterne der Nacht &#9841; &#9789;</title>
+    <title>&#9790;&#9841; Sterne der Nacht &#9841;&#9789;</title>
+</head>    
     <style>
         .mitte {
             display: block;
@@ -31,10 +32,10 @@
             text-align: center;
         }
         .footer { 
-    position: fixed; 
-    bottom: 0;  
-    left: 50%;
-    transform: translate(-50%, -50%);
+         position: fixed; 
+         bottom: 0;  
+         left: 50%;
+        transform: translate(-50%, -50%);
         }
         #Welcome {
         border: purple 5px groove;
@@ -78,7 +79,6 @@
     }
 
 </style>
-</head>
     <body>
         <div class="center">
         <table class="center">
@@ -128,27 +128,26 @@
                 <div id="Incantations">
                     <a href="https://haritsuke.com/releases">
                     <img src="https://sternedernacht.neocities.org/gifs/GuestbookSpell.gif" width="100" class="mitte"
-                    width="200"></a>
-                    <p><i>Unholy Incantations...</i></p>
+                    ></a>
+                    <p><i>Unholy Incantations...</i></p></div>
             </td>
             <td>
                 <div id="Graveyard">
                     <a href="https://haritsuke.com/graveyard">
-                    <img src="https://sternedernacht.neocities.org/gifs/graveyard.gif" width="220px" class="mitte"
-                    width="200"></a>
-                    <p><i>Meet me at the graveyard......</i></p>
+                    <img src="https://sternedernacht.neocities.org/gifs/graveyard.gif" width="220px" class="mitte"></a>
+                    <p><i>Meet me at the graveyard......</i></p></div>
             </td>
             <td>
                 <div id="Contact">
                     <a href="https://haritsuke.com/contact">
-                    <img src="https://sternedernacht.neocities.org/gifs/satan.gif" width=100px class="mitte"
-                    width="200"></a>
-                    <p><i>Speak to me...</i></p>
+                    <img src="https://sternedernacht.neocities.org/gifs/satan.gif" width=100px class="mitte"></a>
+                    <p><i>Speak to me...</i></p></div>
             </td>
         </tr>
     </table>
     <div class="footer"> 
         <img src="https://sternedernacht.neocities.org/gifs/konstruktion.gif" class="mitte">
+    </div>
     </div>
 </body>
 </html>
